--- a/style.css
+++ b/style.css
@@ -19,6 +19,8 @@ header {
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
 
+
+
 .top-bar {
     max-width: 1200px;
     margin: 0 auto;
@@ -285,31 +287,67 @@ nav a {
     height: 200px;
 }
 
-/* Projects Section Styles */
-.projects {
-    background-color: #f2f2f2; /* Light Gray */
-    padding: 40px 20px;
+
+/* Sessão de Projetos */
+
+.title-projeto {
+    background-color: #fafafa;
+}
+
+.style-project {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+}
+
+.title-projeto img {
+margin-top: 0.5em;
+}
+
+.title-projeto h2{
+    color: #CC1235;
+    margin-bottom: 2px;
+    font-size: 3em;
+}
+.title-projeto p{
     text-align: center;
+    width: 100%;
+    margin-top: 2px;
+    font-size: 24px;
+    width: 100%;
 }
 
-.projects h2 {
-    color: #e60013; /* Red title */
-    font-size: 2.5em;
-    margin-bottom: 30px;
-}
 
+/* Sessão de Cards do projeto */
+.projects {
+    background-color: #D9D9D9; 
+    padding: 40px 20px;
+    padding: 20;
+    width: 100%;
+}
 .projects-grid {
     max-width: 1200px;
     margin: 0 auto;
-    display: grid;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     gap: 20px;
 }
 
 .projects-grid img {
     max-width: 100%;
-    border-radius: 5px;
+    border-radius: 6px;
+    display: flex;
+    flex-direction: column;
 }
+
+.box-container{
+    display: flex;
+    flex-wrap:wrap;
+    justify-content: space-between;
+    gap: 30px;
+}
+
+
 
 /* Footer Styles */
 footer {
@@ -497,6 +535,7 @@ footer {
         grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     }
 
+   
     footer {
         padding: 20px 10px;
         text-align: center;
