--- a/style.css
+++ b/style.css
@@ -322,31 +322,28 @@ margin-top: 0.5em;
 /* Sessão de Cards do projeto */
 .projects {
     background-color: #D9D9D9; 
-    padding: 40px 20px;
-    padding: 20;
-    width: 100%;
+    padding: 50px;
 }
 .projects-grid {
     max-width: 1200px;
     margin: 0 auto;
+    display: block;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-    gap: 20px;
+    
 }
 
 .projects-grid img {
-    max-width: 100%;
     border-radius: 6px;
-    display: flex;
-    flex-direction: column;
 }
 
-.box-container{
+.card-container {
     display: flex;
-    flex-wrap:wrap;
+    flex-wrap:wrap; 
     justify-content: space-between;
     gap: 30px;
-}
 
+    
+}
 
 
 /* Footer Styles */
@@ -435,9 +432,28 @@ footer {
 }
 
 .footer-logo {
+    background: #000;
     width: 100px;
     height: 100px;  
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 /* Responsive Design */
