--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    background-color: #f9f9f9;
+    background-color: #fafafa;
 }
 
 a {
@@ -12,43 +12,51 @@ a {
     color: #333;
 }
 
-/* Header Styles */
+/* cabeçalho */
 header {
-    background-color: #fff;
-    padding: 10px 0;
+    background-color: #fafafa;
+    border-top: 28px solid #2F2655;
+    padding: 10px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
 
 
 
 .top-bar {
-    max-width: 1200px;
-    margin: 0 auto;
+    /* max-width: 1200px; */
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0 20px;
+    padding: 0 110px;
 }
 
+.top-bar ul{
+display: flex;
+font-size: 16px;
+
+}
 .logo-container {
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 300px;
+    
 }
 
 .logo {
-    height: 40px;
-    margin-right: 10px;
+    height: 5em;
+    width: 100;
+    display: flex;
+    flex-wrap:wrap;
+    /* margin-right: 10px; */
 }
 
-.fortaleza-logo {
+/* .fortaleza-logo {
     width: 1440;
     height: 501;
     top: -323px;
     left: -859px;
 
-}
+} */
 
 nav ul {
     list-style: none;
@@ -68,11 +76,14 @@ nav a {
 
 
 .hero {
+    border-top: 28px solid #CC1235;
     position: relative;
     text-align: center; 
+    display: block;
 }
 
 .hero-image {
+    
     width: 100%;
     display: block;
     margin: 0 auto; 
@@ -349,9 +360,12 @@ margin-top: 0.5em;
 /* Footer Styles */
 footer {
     background-color: #001f54;
-    color: #fff;
-    padding: 40px 20px;
+    color: #fafafa;
+    padding-top: 5em;
+    padding-bottom: 40px;
+    /* padding: 40px 20px; */
 }
+
 
 .footer-content {
     max-width: 1200px;
@@ -359,14 +373,13 @@ footer {
 }
 
 .footer-top {
-    display: flex;
+    display: flex; 
     align-items: center;
     justify-content: space-around;
-    margin-bottom: 30px;
-}
+} 
 
-.footer-top p {
-    font-size: 1.1em;
+ .footer-top p {
+    font-size: 24px; 
     width: 506;
     height: 34;
     top: 4118px;
@@ -376,24 +389,28 @@ footer {
 
 .footer-bottom {
     display: flex;
+    flex-direction:column;
     justify-content: space-around;
     text-align: left;
-    width: 30;
+    /* width: 30;
     height: 30;
     top: 4173px;
-    left: -759px;
-
+    left: -759px; */
 }
+
 
 .footer-section {
     width: 45%; 
+    background: #000;
+    display: block;
+    
 }
 
 .footer-section h3 {
     margin-bottom: 15px;
     font-size: 1.3em;
     border-bottom: 1px solid #fff;
-    padding-bottom: 5px;  /* Add some spacing under the line */
+    padding-bottom: 5px;  
 }
 
 .footer-section ul {
@@ -432,10 +449,13 @@ footer {
 }
 
 .footer-logo {
-    background: #000;
-    width: 100px;
-    height: 100px;  
+    width: 14%;
+    height: 100px; 
 }
+
+.footer-logo-fortaleza {
+    width: 8%;
+}  
 
 
 
