--- a/style.css
+++ b/style.css
@@ -383,23 +383,28 @@ margin-top: 0.5em;
 
 /* Footer Styles */
 footer {
+    display: flex;
     background-color: #001f54;
     color: #fafafa;
     padding-top: 5em;
     padding-bottom: 40px;
-    /* padding: 40px 20px; */
+    justify-content: space-between;
+     /* Alinha os itens verticalmente */
+    padding: 40px 20px; 
 }
 
 
 .footer-content {
-    max-width: 1200px;
-    margin: 0 auto;
+    display: grid;
+    padding: 50px; /* Espaçamento interno */
 }
 
 .footer-top {
-    display: flex; 
-    align-items: center;
-    justify-content: space-around;
+    display: grid;
+    flex-direction: column; /* Alinha os itens verticalmente */
+    justify-content: space-between;   /* Centraliza horizontalmente */
+    text-align: start; /* Centraliza o texto */
+    margin-bottom: 20px; /* Espaçamento abaixo do topo */
 } 
 
  .footer-top p {
@@ -413,28 +418,16 @@ footer {
 
 .footer-bottom {
     display: flex;
-    flex-direction:column;
-    justify-content: space-around;
-    text-align: left;
-    /* width: 30;
-    height: 30;
-    top: 4173px;
-    left: -759px; */
+    gap: 100px; /* Espaçamento entre as colunas */
 }
 
-
-.footer-section {
-    width: 45%; 
-
-    display: block;
-    
-}
 
 .footer-section h3 {
-    margin-bottom: 15px;
+    width: 186px;
+    margin-bottom: 15px; 
     font-size: 1.3em;
     border-bottom: 1px solid #fff;
-    padding-bottom: 5px;  
+    padding-bottom: 5px;
 }
 
 .footer-section ul {
@@ -458,28 +451,30 @@ footer {
 }
 
 .social-media {
-    display: flex;
-    gap: 15px;
+    max-width: 150px;
+    margin-bottom: 10px;
 }
 
 .social-media img {
     width: 30px;
     height: 30px;
-    width: 180.63063049316406;
+    top: 3984px;
+    left: -759px;
+
+}
+.nav {
+    max-width: 100px; /* Largura máxima do logo */
+    margin-bottom: 5px; /* Espaçamento abaixo do logo */
+    display: flex;
+    gap: 70px; /* Espaçamento entre as colunas */
+}
+.nav img{
+    width: 180;
     height: 100;
     top: 3984px;
     left: -759px;
 
 }
-
-.footer-logo {
-    width: 14%;
-    height: 100px; 
-}
-
-.footer-logo-fortaleza {
-    width: 8%;
-}  
 
 
 /* Responsive Design */
@@ -578,26 +573,24 @@ footer {
     }
 
    
-    footer {
-        padding: 20px 10px;
-        text-align: center;
+    .footer-grid {
+        grid-template-columns: 1fr; /* Duas colunas em telas maiores */
     }
 
     .footer-top {
-        flex-direction: column;
-        align-items: center;
-        margin-bottom: 20px;
+        flex-direction: row; /* Alinha os itens horizontalmente */
+        justify-content: space-around; /* Distribui os itens uniformemente */
+        align-items: flex-start;
+        text-align: left;
+    }
+
+    .footer-logo {
+        margin-bottom: 0; /* Remove a margem inferior do logo em telas maiores */
     }
 
     .footer-bottom {
-        flex-direction: column;
-        text-align: center;
-        margin-top: 20px;  /* Separate bottom section on mobile */
+        grid-template-columns: repeat(2, 1fr); /* Duas colunas em telas maiores */
     }
 
-    .footer-section {
-        width: 100%;
-        margin-bottom: 20px;
-    }
 
 }
